--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -46,17 +46,10 @@
     padding-bottom: 40vh;
     
     a{
-        width: 20vw;
-        font-size: 1rem;
-        text-decoration: none;
-        color: black;
-        background-color: #ffffff;
-        border-color:rgb(255, 0, 0); 
-        border: 2px solid;
-        border-radius: 10px;
-        padding: 10px;
-        margin-top: 10px;
+    color:#ffffff;
+    text-decoration: none;
     }
+
     h2{
         font-size: 2rem;
         color: #ffffff;
