--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -22,6 +22,7 @@
     padding-left: 30px;
 }
 .navegador{
+    margin-left: 3rem;
     margin-bottom: 10px;
 }
 
@@ -30,7 +31,10 @@
     text-decoration: none;
     color: rgb(255, 0, 0);
 }
-
+@media screen and (max-width: 992px){
+    .anclas{font-size: .75rem;
+    }
+}
 /********************************Clases del Main*/
 .divMain{
     display: flex;
@@ -53,8 +57,7 @@
     h2{
         font-size: 2rem;
         color: #ffffff;
-    }
-}
+    }}
 h1{
     color: rgb(255, 0, 0);
     font-size: 3rem;
@@ -69,32 +72,8 @@ h1{
         h2{
             font-size: 1.5rem;
             color: #ffffff;
-        }
-    }
-}
+        }}}
 
-.videoIndex{
-    width: 100%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    display: grid;
-    grid-template-columns: 10% 40% 40% 10%;
-    grid-template-rows: auto auto;
-    grid-template-areas: "vacio video descripcion1 vacio"
-                         "vacio descripcion2 foto vacio";
-
-    .video{
-        padding-bottom: 20px;
-    }
-    .descripcion1{
-        padding-top: 20px;
-        padding-left: 20px;
-    }
-    .descripcion2{
-        padding-top: 20px;
-        padding-right: 20px;
-    }
-}
 h2{
 color: rgb(255, 0, 0);
 }
@@ -118,8 +97,7 @@ color: rgb(255, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;   
 }
 
 .fotoContacto{
@@ -137,6 +115,10 @@ color: rgb(255, 0, 0);
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-evenly;
+}
+@media screen and (max-width: 992px){
+    .mainComprar{flex-wrap: wrap;
+    }
 }
 .btn{
     background-color: rgb(255,0, 0);
@@ -156,6 +138,7 @@ color: rgb(255, 0, 0);
     text-align: center;
     color:rgb(255,0, 0) ;
 }
+
 
 /******************************Clases Servicios*/
 .mainServicios{
