--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -138,7 +138,9 @@ color: rgb(255, 0, 0);
     text-align: center;
     color:rgb(255,0, 0) ;
 }
-
+#dolar{
+    color:black;
+}
 
 /******************************Clases Servicios*/
 .mainServicios{
@@ -232,5 +234,15 @@ p{text-align: justify;}
     right: 50px;
     bottom: 50px;
     color:rgb(29, 152, 29);
+    background-color: #ffffff;
+    width: 60px;
+    height: 60px;
+    padding-left: 9px;
+    padding-top: 7px;
+    border-radius: 50%;
     font-size: 3rem;
+}
+li a {
+    color: #ffffff;
+    text-decoration: none;
 }
